[package]
name = "kdtree"
version = "0.6.1-alpha.0"
authors = ["Rui Hu <code@mrhooray.com>"]
description = "K-dimensional tree in Rust for fast geospatial indexing and nearest neighbors lookup"
keywords = ["tree", "nearest", "neighbor", "search", "geo"]
readme = "README.md"
repository = "https://github.com/mrhooray/kdtree-rs"
documentation = "https://docs.rs/kdtree"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.7.3"
num-traits = "0.2"
serde_json = "*"
serde-big-array = "*"

[dependencies.serde]
version = "1.0"
optional = true
bincode = "*"

[dependencies.serde_derive]
version = "1.0"
optional = true

[dependencies.bincode]
optional = true

# For Clamor.
[dependencies.rsmalloc]
path = "../rsmalloc"
optional = true

[features]
serialize = ["serde", "serde_derive", "bincode"]
clamor = ["rsmalloc"]

[lib]
crate-type = ["cdylib"]